fixed spacing

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -400,9 +400,9 @@ section.features .section-heading p {
       font-size:17px
   }
 /*for form*/
-  .center {
+/*  .center {
     margin-top:50px;
-}
+}*/
 
 .modal-header {
 	padding-bottom: 5px;
